# blossy-cli

./: .pylintrc  README.md  a.out  pyproject.toml  requirements.txt
.github/workflows/: python-semantic-release.yml
src/blossy/: __init__.py  blossy.py  calc.py  calct.py  main.py
src/blossy/command/: calculate.py  count_chars.py  count_lines.py  percentage.py  random_cmd.py  standardize.py
src/blossy_cli/: main.py
src/blossy_cli/calculate/: __init__.py  error.py  model.py  service.py
src/blossy_cli/command/: __init__.py  calc.py  calct.py  count_chars.py  count_lines.py  percentage.py  random.py  standardize.py
src/mafs/: calc.py  calc_parser.py  mafs.py  main.py
