[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blossy"
version = "7.0"
description = "A lil' bud that helps you with stuff (it's a utility CLI)."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Ryan Sakurai", email = "ryansakurai03@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "click==8.1.7",
    "colorama==0.4.6",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "Pygments==2.17.2",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sly==0.5",
    "typer==0.9.0",
    "typing_extensions==4.10.0"
]

[project.urls]
repository = "https://github.com/ryansakurai/blossy-cli"

[project.scripts]
blossy = "blossy.blossy:app"
