[project]
name = "blossy-cli"
version = "6.0.0"
description = "A lil' bud that helps you with stuff (it's a utility CLI)."
authors = [
    {name = "Ryan Sakurai",email = "ryansakurai03@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.17.4,<0.18.0)",
    "sly (>=0.5,<0.6)"
]

[project.urls]
repository = "https://github.com/ryansakurai/blossy-cli"

[project.scripts]
blossy = "blossy_cli.main:app"

[tool.poetry]
packages = [{include = "blossy_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]
