[project]
name = "blossy"
version = "7.0.3"
description = "A lil' bud that helps you with stuff (it's a utility CLI)."
authors = [
    {name = "Ryan Sakurai",email = "ryansakurai03@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.17.4,<0.18.0)",
    "sly (>=0.5,<0.6)"
]

[project.urls]
repository = "https://github.com/ryansakurai/blossy-cli"

[project.scripts]
blossy = "blossy.main:app"

[tool.poetry]
packages = [{include = "blossy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
